# iot-project

./: .gitignore  .gitmodules  pins.txt
docs/: DWM1001 Non-PANS questions (accuracy, factory calibrated antenna delay etc.) - Decawave Developers Forum - Decawave Tech Forum.html  NUCLEO-F446RE _ Mbed.html  SPI master with DMA implementation · Issue #571 · enjoy-digital_litex.html
docs/DWM1001 Non-PANS questions (accuracy, factory calibrated antenna delay etc.) - Decawave Developers Forum - Decawave Tech Forum_files/: desktop_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  desktop_theme_2_77ac312931c6914ce3341f9578b401bc83be4632.css  discourse-akismet_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  discourse-details_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  lazy-yt_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  poll_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  poll_desktop_a993328d5ac280a13819bd9bf5ece8cc82fbba4e.css  svg-2-a7a34c4b2bac8bf3afeebcce62fcd1aa4296b157.js
docs/NUCLEO-F446RE _ Mbed_files/: BrMw5TNQROo&list.html  gtm.js  hotjar-971746.js  legacy-bundle.3deb31b0cc12.js  legacy-main.0a27c356d9f2.css  output.133580daa13c.js
docs/SPI master with DMA implementation · Issue #571 · enjoy-digital_litex_files/: 1450143  1450143(1)  1450143(2)  164396  164396(1)  164396(2)  4348372  4348372(1)  4348372(2)  behaviors-48a810382fb3ec1b7a2c3c67d1cf6db3.css  frameworks-d308413e2deac0a69b7ad51214884fb5.css  github-d712fe62eb0cfeac934dffb4cf8eccca.css
nuttx-app/: CMakeLists.txt  README.md
nuttx-app/cmake/: pozyx_f401rc.cmake
nuttx-app/include/: mavlink_receiver.hpp
nuttx-app/include/mavlink/v2.0/common/: version.h
nuttx-app/nuttx-export-10.1.0-RC1/: .config  System.map
nuttx-app/nuttx-export-10.1.0-RC1/scripts/: Make.defs  f401rc.ld
nuttx-app/src/: main.cpp
pozyx_f401rc/: pozyx_f401rc.dts
zephyr-app/: prj.conf
zephyr-app/basic_uart/: README.md  prj.conf
zephyr-app/basic_uart/include/: endian.h
zephyr-app/basic_uart/src/: main.cpp
zephyr-app/simple_i2c/: CMakeLists.txt  README.md  prj.conf
zephyr-app/simple_i2c/include/: endian.h
zephyr-app/simple_i2c/src/: main.cpp
zephyr-app/src/: main.cpp
